# ZerolanLiveRobot

./: .gitignore  API.md  LICENSE  README.md  api.md  api_run.py  audio_player.py  baidu.py  blip_run.py  bot.py  build.py  common.py  common22.py  compile.bat  config.py  const.py  context.py  controller.py  custom.py  emo.py  file_app.py  global_config.yaml  gpt_sovits_api.py  init.py  initzr.py  lifecircle.py  lifecycle.py  llm_api.py  llm_start.py  main.py  microphone.py  model_loader.py  n_lifecycle.py  package.json  pyproject.toml  python.yaml  requirements.txt  service_starter.py  start.py  start_llm.py  (+6 more)
agent/: adaptor.py  api.py  baidu.py  custom_agent.py  file_finder.py  graph.py  location_attn.py  model_modifier.py  qa.py  sentiment.py  summary.py  tool_agent.py  translator.py
asr/: api.py  pipeline.py  service.py  vad.py
audio_player/: __init__.py  service.py
bilibili/: __init__.py  config.yaml  live_dnmk_mng.py  service.py
blip-img-cap/: config.yaml
blip_img_cap/: api.py  app.py  infer.py  service.py
character/: config.py
chatglm3/: __init__.py  api.py  app.py  common.py  config.yaml  core.py  service.py
common/: abs_app.py  abs_model.py  abs_pipeline.py  abs_runnable.py  abs_service.py  asyncio_util.py  config.py  config_loader.py  data.py  datacls.py  decorator.py  enum.py  enumerator.py  eventemitter.py  exc.py  gen.py  interpretable.py  killable_thread.py  limit_list.py  thread.py  thread_killer.py  util.py  ver_check.py
config/: config.yaml  config_template.yaml  default_config.yaml  global_config.py  template_config.yaml
io/: writer.py
(+449 files in other folders)
