[project]
name = "zerolanliverobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "beautifulsoup4>=4.14.2",
    "bilibili-api-python>=17.4.0",
    "flask>=3.1.2",
    "gradio>=5.50.0",
    "injector>=0.22.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langgraph>=1.0.3",
    "librosa>=0.11.0",
    "live2d-py>=0.5.4",
    "loguru>=0.7.3",
    "ncatbot>=4.0.7",
    "netifaces>=0.11.0",
    "openai>=2.8.1",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pydantic==2.11",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "scipy>=1.16.3",
    "selenium>=4.38.0",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "twitchapi>=4.5.0",
    "typeguard>=4.4.4",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
    "zerolan-data",
]

[tool.uv.sources]
zerolan-data = { git = "https://github.com/AkagawaTsurunaki/zerolan-data.git", rev = "dev" }
